fix: toggle-box set position prop cause z-index

--- a/src/styles/components/elements/form-items/toggle-box.module.scss
+++ b/src/styles/components/elements/form-items/toggle-box.module.scss
@@ -33,6 +33,7 @@ $animationTime: 0.3s;
 
 .box {
   box-sizing: border-box;
+  position: relative;
   z-index: 0;
   transition: background-color #{$animationTime};
 
